--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,60 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 16px;
+}
+
 body {
+    background-color: #686de0;
+    font-family: 'Roboto', sans-serif;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* height: 100vh; */
+    overflow: hidden;
+    margin: 0;
+    /* padding: 10px; */
+}
+
+img {
+    width: 100%;
+}
+
+figure {
+    margin: 0;
+}
+
+.content-wrapper {
     background-color: #686de0;
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    overflow: hidden;
     margin: 0;
-    padding: 20px;
+    padding: 15px;
+    /* height: 100vh; */
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.content-wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+.top-container,
+.bottom-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-container figure,
+.bottom-container figure {
+    width: 40%;
 }
 
 .container {
@@ -23,8 +66,8 @@ body {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
     padding: 50px 20px;
     text-align: center;
-    max-width: 100%;
-    width: 800px;
+    /* max-width: 100%; */
+    max-width: 800px;
 }
 
 h3 {
@@ -34,7 +77,8 @@ h3 {
 }
 
 .joke {
-    font-size: 30px;
+    /* font-size: 30px; */
+    font-size: 1.25rem;
     letter-spacing: 1px;
     line-height: 40px;
     margin: 50px auto;
@@ -48,7 +92,7 @@ h3 {
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
     padding: 14px 40px;
-    font-size: 16px;
+    font-size: 1rem;
     cursor: pointer;
 }
 
