--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,12 @@ html {
 body {
     background-color: #686de0;
     font-family: 'Roboto', sans-serif;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* height: 100vh; */
-    overflow: hidden;
     margin: 0;
-    /* padding: 10px; */
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 img {
@@ -38,7 +36,7 @@ figure {
     justify-content: center;
     margin: 0;
     padding: 15px;
-    /* height: 100vh; */
+    min-height: 100dvh;
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -48,10 +46,15 @@ figure {
     display: none;
 }
 
-.top-container,
-.bottom-container {
+.top-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.bottom-container {
+    display: flex;
+    justify-content: flex-end;
     align-items: center;
 }
 
@@ -60,13 +63,17 @@ figure {
     width: 40%;
 }
 
+#emoji-tears {
+    display: none;
+}
+
 .container {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
     padding: 50px 20px;
     text-align: center;
-    /* max-width: 100%; */
+    margin-bottom: 15px;
     max-width: 800px;
 }
 
@@ -77,7 +84,6 @@ h3 {
 }
 
 .joke {
-    /* font-size: 30px; */
     font-size: 1.25rem;
     letter-spacing: 1px;
     line-height: 40px;
@@ -102,4 +108,23 @@ h3 {
 
 .btn:focus {
     outline: 0;
+}
+
+@media (min-width:500px) {
+    .top-container {
+        justify-content: space-between;
+        max-width: 800px;
+    }
+
+    .top-container figure {
+        max-width: 20%;
+    }
+
+    .bottom-container figure {
+        width: 30%;
+    }
+
+    #emoji-tears {
+        display: block;
+    }
 }
